// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch[Base] should render correctly  1`] = `
<button
  class="c-dx1yqk"
  role="switch"
  type="button"
>
  <input
    style="display: none;"
    tabindex="0"
    type="checkbox"
  />
  <div
    class="c-x0444g"
  />
  <div
    class="c-okgmra"
  >
    <div
      class="ctkieid"
    />
  </div>
</button>
`;

exports[`Switch[Base] should render correctly about loading 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="c-dx1yqk cj0v5lv ck7m2o"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-x0444g"
    >
      <div
        class="c-yqjn8z"
      />
    </div>
    <div
      class="c-okgmra"
    >
      <div
        class="ctkieid"
      />
    </div>
  </button>
  <button
    class="c-dx1yqk ck7m2o"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-x0444g"
    >
      <div
        class="c-yqjn8z"
      />
    </div>
    <div
      class="c-okgmra"
    >
      <div
        class="ctkieid"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about size 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="c-dx1yqk cdpvm2r"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-x0444g"
    />
    <div
      class="c-okgmra"
    >
      <div
        class="ctkieid"
      />
    </div>
  </button>
  <button
    class="c-dx1yqk"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-x0444g"
    />
    <div
      class="c-okgmra"
    >
      <div
        class="ctkieid"
      />
    </div>
  </button>
  <button
    class="c-dx1yqk cdltqk7"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-x0444g"
    />
    <div
      class="c-okgmra"
    >
      <div
        class="ctkieid"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about status 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px;"
>
  <button
    class="c-dx1yqk cj0v5lv ck7m2o"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-x0444g"
    />
    <div
      class="c-okgmra"
    >
      <div
        class="ctkieid"
      />
    </div>
  </button>
  <button
    class="c-dx1yqk ck7m2o"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-x0444g"
    />
    <div
      class="c-okgmra"
    >
      <div
        class="ctkieid"
      />
    </div>
  </button>
</div>
`;
